Revert "Z-index Main Wrapper (Map) increased to 500, to avoid being hidden behind header, in Lefalet Full View control activated"
This reverts commit 8dded54778d1f320076eacde0164b7a7de6d4e13.

--- a/web/modules/custom/italo_module/sass/common.scss
+++ b/web/modules/custom/italo_module/sass/common.scss
@@ -5,10 +5,6 @@
   font-weight: bold;
 }
 
-.main-wrapper {
-  z-index: 500;
-}
-
 .paragraphs-subform .field-group-details.geometry-attributes .details-wrapper {
   display: flex;
   justify-content: space-around;
